--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<div id="app">
+		Select an item:
 		<ul data-category-id="981">
 			<li data-item-id="24">Item 1</li>
 			<li data-item-id="54">Item 2</li>
