Add another list to prevent global selector

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+	<nav>
+		<ul>
+			<li class="current">Catalog</li>
+			<li>News</li>
+		</ul>
+	</nav>
 	<div id="app">
 		Select an item:
 		<ul data-category-id="981">
