Add item details section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 			<li data-item-id="42">Item 6</li>
 		</ul>
 
-		<div class="content" data-id="contentContainer">
+		<fieldset class="content" data-id="contentContainer">
+			<legend>Item details</legend>
 			<h1 class="content__title" data-id="contentContainerTitle"></h1>
 			<p class="content__description" data-id="contentContainerDescription"></p>
 			<a href="content__link" data-id="contentContainerLink" href="#">Read more</a>
-		</div>
+		</fieldset>
 	</div>
 
 	<script src="src/index.js"></script>
