--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<fieldset class="content" data-id="contentContainer">
 			<legend>Item details</legend>
 			<h1 class="content__title" data-id="contentContainerTitle"></h1>
-			<p class="content__description" data-id="contentContainerDescription"></p>
+			<p class="content__summary" data-id="contentContainerSummary"></p>
 			<a href="content__link" data-id="contentContainerLink" href="#">Read more</a>
 		</fieldset>
 	</div>
